style: fix dark mode colours for navbar, sidebar and footer

--- a/components/footer.module.scss
+++ b/components/footer.module.scss
@@ -5,5 +5,5 @@
 }
 
 .githubLink {
-  color: black !important;
+  color: var(--color) !important;
 }
